--- a/index.css
+++ b/index.css
@@ -59,12 +59,13 @@ main {
     font-weight: 600;
     font-size: 32px;
     line-height: 36px;
+    margin-bottom: 5px;
 }
 
 .image_subheading {
     font-weight: 400;
     font-size: 18px;
-    line-height: 32px;
+    line-height: 24px;
 }
 
 .image_stamp {
