--- a/index.css
+++ b/index.css
@@ -90,11 +90,14 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
+
     border-radius: 100%;
     border: none;
     box-shadow: 0px 10px 20px #E9E9EA;
+
     padding: 1em;    
     background:#FFFFFF;
+    cursor: pointer;
 }
 
 #btn_nope:hover {
